--- a/xcode/Ctrl-Cut.xcodeproj/xcshareddata/xcschemes/gui.app.xcscheme
+++ b/xcode/Ctrl-Cut.xcodeproj/xcshareddata/xcschemes/gui.app.xcscheme
@@ -61,6 +61,10 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "grouptest.cut"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = ""
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
